v2 fixed dark mode

--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ body {
     justify-content: center;
     align-items: center;
     font-family: 'Architects Daughter', cursive;
-    /* font-family: 'Roboto', sans-serif; */
+    font-family: 'Roboto', sans-serif;
 }
 /*  use this in the head of html to make it work responsivly 
 <meta name="viewport" content="width=device-width, initial-scale=1">
